install_data(
  'scalable/org.gnome.Devhelp.svg',
  install_dir: join_paths(
    get_option('prefix'),
    get_option('datadir'),
    'icons/hicolor/scalable/apps'
  )
)

install_data(
  'symbolic/org.gnome.Devhelp-symbolic.svg',
  install_dir: join_paths(
    get_option('prefix'),
    get_option('datadir'),
    'icons/hicolor/symbolic/apps'
  )
)
