imagedir = $(datadir)/devhelp/images
image_DATA = 		\
	book_open.png   \
	book_closed.png \
	helpdoc.png

uidir = $(datadir)/devhelp/ui
ui_DATA = 				\
	window.ui

gladedir = $(datadir)/devhelp
glade_DATA =                            \
	devhelp.glade

EXTRA_DIST = $(image_DATA) 		\
	     $(ui_DATA)                 \
	     $(glade_DATA)
